@@ -46,3 +46,8 @@ AT_KEYWORDS([igraph_get_shortest_paths shortest paths geodesic])
 AT_COMPILE_CHECK([simple/igraph_get_shortest_paths.c], 
 		 [simple/igraph_get_shortest_paths.out])
 AT_CLEANUP
+
+AT_SETUP([Edge betweenness])
+AT_KEYWORDS([igraph_edge_betweenness betwenness])
+AT_COMPILE_CHECK([simple/igraph_edge_betweenness.c])
+AT_CLEANUP
